# RK_VideoPipe

./: .gitignore  CMakeLists.txt  README.md  build.sh  git_update.sh  main.cc  system_status.xlsx
assets/configs/: crane_weight.json  person.json
cmake/: common.cmake
log/: 2025-10-23.txt  2025-10-24.txt  2025-10-27.txt  2025-10-28.txt  2025-10-29.txt  2025-10-30.txt  2025-10-31.txt  2025-11-03.txt  2025-11-04.txt  2025-11-05.txt  2025-11-06.txt  2025-11-07.txt  2025-11-11.txt  2025-11-12.txt  2025-11-27.txt
models/: resize_function.h  yolo_post.cpp
python/: record_system_status.py
videocodec/: Decoder.h  Demuxer.cpp  Encoder.cpp
vp_node/: CMakeLists.txt
vp_node/nodes/: vp_file_src_node.cpp  vp_rk_rtsp_src_node.cpp  vp_rtmp_des_node.h  vp_rtsp_des_node.cpp  vp_rtsp_des_node.h  vp_rtsp_mul_des_node.cpp  vp_rtsp_mul_des_node.h  vp_rtsp_src_node.cpp  vp_rtsp_src_node.h  vp_udp_des_node.cpp  vp_udp_des_node.h
vp_node/nodes/infer/: vp_rk_first_yolo.cpp
vp_node/objects/: vp_frame_meta.cpp  vp_frame_meta.h
